--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,4 +3,7 @@ project(logowl)
 
 set(CMAKE_CXX_STANDARD 17)
 
+
+add_subdirectory(owlib)
 add_executable(logowl main.cpp)
+target_link_libraries(logowl owlib)
