--- a/owlib/CMakeLists.txt
+++ b/owlib/CMakeLists.txt
@@ -1,15 +1,18 @@
 cmake_minimum_required(VERSION 3.20)
 project(logowl)
 
-set(CMAKE_CXX_STANDARD 17)
+set(CMAKE_CXX_STANDARD 20)
 
 add_library(logowl_lib
-                utils.cpp
-                invalid_argument_exception.cpp
-                alert.cpp
-                owl.cpp
-                logowl.cpp
-                http_logowl.cpp
-                owl_builder.cpp)
-
-add_subdirectory(test)
+            utils.cpp
+            reader/log_reader.cpp
+            reader/file_log_reader.cpp
+            parser/log_parser.cpp
+            parser/csv_log_parser.cpp
+            exception/invalid_argument_exception.cpp
+            rule/process_log_rule.cpp
+            alert/alert.cpp
+            owl/owl.cpp
+            owl/logowl.cpp
+        owl/owl_builder.cpp
+)
